fix: support relative server URLs
According to the OpenAPI specification the URL of a Server Object may be
relative, to indicate that the host location is relative to the location
where the document containing the Server Object is being served.
ServerImpl rejected such URLs because java.net.URL requires a protocol.

Parse the URL with java.net.URI instead and only apply the strict
java.net.URL validation to absolute URLs, so the existing behaviour for
absolute URLs is unchanged.

Fixes #99

(cherry picked from commit d3f439def87f5911cfc93564b973121afce0d5e2)